salesforce-mcp-package/force-app/main/default/objects/Notification_Broadcast__c/Notification_Broadcast__c.object-meta.xml
<CustomObject>
    <description>Stores persistent top notification broadcast configurations, targeting criteria, and expiration rules.</description>
    <label>Notification Broadcast</label>
    <nameField>
        <displayFormat>NB-{00000}</displayFormat>
        <label>Broadcast Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Broadcasts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>