salesforce-mcp-package/force-app/main/default/objects/Notification_Broadcast__c/fields/Target_User_Ids__c.field-meta.xml
<CustomField>
    <fullName>Target_User_Ids__c</fullName>
    <label>Target User Ids</label>
    <type>LongTextArea</type>
    <length>32768</length><visibleLines>3</visibleLines>
</CustomField>