salesforce-mcp-package/force-app/main/default/objects/Notification_Broadcast__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Text</type>
    <length>255</length><required>false</required>
</CustomField>